force-app/main/default/objects/cgcloud__User_Document_Template_Activity__c/cgcloud__User_Document_Template_Activity__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between daily report template and the user activity.</description>
    <label>Daily Report Template Activity</label>
    <nameField>
        <displayFormat>DRTA-{000000}</displayFormat>
        <label>Daily Report Template Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Report Template Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>