force-app/main/default/objects/cgcloud__User_Document_Template_Activity__c/fields/cgcloud__Activity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Visit_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipName>User_Document_Template_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>