force-app/main/default/objects/cgcloud__User_Document_Template_Activity__c/fields/cgcloud__Max_Hours__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Hours__c</fullName>
    <label>Max Hours</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>