force-app/main/default/objects/cgcloud__User_Document_Template_Activity__c/fields/cgcloud__Unique_Activity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Activity__c</fullName>
    <label>Unique Activity</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>