force-app/main/default/objects/cgcloud__User_Document_Template_Activity__c/validationRules/cgcloud__Max_Hours_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Max_Hours_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(cgcloud__Max_Hours__c &lt; 0, cgcloud__Max_Hours__c &gt; 24)</errorConditionFormula>
    <errorMessage>Max Hours must be a number between 0 and 24.</errorMessage>
</ValidationRule>